--- a/pages/guard_0/index.html
+++ b/pages/guard_0/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
 		<link rel="stylesheet" href="/manual/css/default.css">
-		<title>队员</title> 
+		<title>保卫营地</title> 
 	</head> 
 	<body> 
 		 
@@ -54,7 +54,7 @@
 		<div><div class = "point" ></div><a   href="/manual/pages/battle_auto/">自动战斗</a>
 		</div></div></div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a  class="active"   onelevellabel_a = "true"  href="/manual/pages/character_0/">队员</a>
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/character_0/">队员</a>
 		</div><div class="children"><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "point" ></div><a   href="/manual/pages/character_ability/">能力</a>
@@ -96,7 +96,7 @@
 		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/dispatch_0/">派遣</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/guard_0/">保卫营地</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a  class="active"   onelevellabel_a = "true"  href="/manual/pages/guard_0/">保卫营地</a>
 		</div></div></div>
 
 <script>
@@ -161,35 +161,21 @@
 	}
 </script> 
 		<div class="content">
-			<h1>队员</h1>
-<p>随着主人公探险的推进，会有越来越多的伙伴加入探险队。队员的能力、技能各异，能在战斗、探险两方面大显身手。</p>
-<p>队员有猎人、战士、机械师、商人4种职业，不同职业的能力成长倾向、职业技能不同。</p>
-<h1>职业</h1>
-<h2><img src="/assets/hunter.png" alt="hunter">猎人</h2>
+			<h1>保卫营地</h1>
+<p>营地可以自动生产钢、电子元件、废料这些制造战车的材料。</p>
+<h2>部署防守</h2>
+<p>需要安排驯服的宠物防守营地，最多可以部署3个队伍，每个队伍最多上阵7个宠物，但3个队伍上阵宠物的总数不能超过15个。</p>
+<p>上阵宠物的总等级越高，资质越高，营地越容易生产出稀有的道具。</p>
+<p>部署防守后，营地每小时生产1个道具。</p>
+<p>当营地被其他玩家挑战时，根据攻方获得的星数，守方会损失一定产量，每天最多因此损失10小时的产量。</p>
+<h2>挑战</h2>
+<p>可以挑战其他玩家的营地。每次挑战需要消耗1个挑战券。</p>
+<p>每次挑战可以发起2次战斗，根据获得的星数，挑战积分相应上升或下降。</p>
 <ul>
-<li>拥有最高的驾驶成长，较为出色的敏捷成长，是队伍中的输出中坚。</li>
-<li>技能偏向进攻，全门开火是最强大的输出技能。</li>
-<li>擅长使用主炮，大多数猎人拥有加强主炮的技能。</li>
+<li>战斗胜利，星数+1</li>
+<li>战后获得宝箱，额外星数+1</li>
 </ul>
-<h2><img src="/assets/soldier.png" alt="soldier">战士</h2>
-<ul>
-<li>拥有最高的体质成长，是队伍中的坚盾。</li>
-<li>技能偏向防守、团队增益，但一些足够强大的战士，可以脱离战车手撕敌人。</li>
-<li>擅长迎击武器。</li>
-</ul>
-<h2><img src="/assets/mechanic.png" alt="mechanic">机械师</h2>
-<ul>
-<li>拥有最高的感知成长，是队伍续航的保障。</li>
-<li>拥有各种修理技能。</li>
-<li>擅长使用副炮。</li>
-</ul>
-<h2><img src="/assets/merchant.png" alt="merchant">商人</h2>
-<ul>
-<li>拥有最高的幸运成长，是可以创造奇迹的职业。</li>
-<li>技能十分全面，可以担任队伍中的任何位置。</li>
-<li>擅长使用SE。</li>
-<li>独有的驯服技能，可以将怪物捕获为宠物。</li>
-</ul>
+<p>每天根据挑战积分排名，获得相应的排名奖励。</p>
 
 		</div> 
 	</body>
