--- a/AllLableTest/index.html
+++ b/AllLableTest/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
 		<link rel="stylesheet" href="/manual/css/default.css">
-		<title>队员</title> 
+		<title></title> 
 	</head> 
 	<body> 
 		 
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a  class="active"   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -54,7 +54,7 @@
 		<div><div class = "point" ></div><a   href="/manual/pages/battle_auto/">自动战斗</a>
 		</div></div></div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a  class="active"   onelevellabel_a = "true"  href="/manual/pages/character_0/">队员</a>
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/character_0/">队员</a>
 		</div><div class="children"><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "point" ></div><a   href="/manual/pages/character_ability/">能力</a>
@@ -161,35 +161,96 @@
 	}
 </script> 
 		<div class="content">
-			<h1>队员</h1>
-<p>随着主人公探险的推进，会有越来越多的伙伴加入探险队。队员的能力、技能各异，能在战斗、探险两方面大显身手。</p>
-<p>队员有猎人、战士、机械师、商人4种职业，不同职业的能力成长倾向、职业技能不同。</p>
-<h1>职业</h1>
-<h2><img src="/assets/hunter.png" alt="hunter">猎人</h2>
+			<h1>一级标题</h1>
+<h2>二级标题</h2>
+<h3>三级标题</h3>
+<hr>
+<p><em>斜体文本</em></p>
+<p><strong>粗体文本</strong></p>
+<p><em><strong>粗斜体文本</strong></em></p>
+<p><u>带下划线文本</u></p>
+<p><s>中线文本</s></p>
+<hr>
+<ol>
+<li>第一项</li>
+<li>第二项</li>
+<li>第三项</li>
+</ol>
+<hr>
 <ul>
-<li>拥有最高的驾驶成长，较为出色的敏捷成长，是队伍中的输出中坚。</li>
-<li>技能偏向进攻，全门开火是最强大的输出技能。</li>
-<li>擅长使用主炮，大多数猎人拥有加强主炮的技能。</li>
+<li>1</li>
+<li>2</li>
+<li>3</li>
 </ul>
-<h2><img src="/assets/soldier.png" alt="soldier">战士</h2>
+<hr>
+<ol>
+<li>第一项：
 <ul>
-<li>拥有最高的体质成长，是队伍中的坚盾。</li>
-<li>技能偏向防守、团队增益，但一些足够强大的战士，可以脱离战车手撕敌人。</li>
-<li>擅长迎击武器。</li>
+<li>第一项嵌套的第一个元素</li>
+<li>第一项嵌套的第二个元素</li>
 </ul>
-<h2><img src="/assets/mechanic.png" alt="mechanic">机械师</h2>
+</li>
+<li>第二项：
 <ul>
-<li>拥有最高的感知成长，是队伍续航的保障。</li>
-<li>拥有各种修理技能。</li>
-<li>擅长使用副炮。</li>
+<li>第二项嵌套的第一个元素</li>
+<li>第二项嵌套的第二个元素</li>
 </ul>
-<h2><img src="/assets/merchant.png" alt="merchant">商人</h2>
-<ul>
-<li>拥有最高的幸运成长，是可以创造奇迹的职业。</li>
-<li>技能十分全面，可以担任队伍中的任何位置。</li>
-<li>擅长使用SE。</li>
-<li>独有的驯服技能，可以将怪物捕获为宠物。</li>
-</ul>
+</li>
+</ol>
+<hr>
+<blockquote>
+<p>最外层</p>
+<blockquote>
+<p>第一层嵌套</p>
+<blockquote>
+<p>第二层嵌套</p>
+</blockquote>
+</blockquote>
+</blockquote>
+<hr>
+<p><a href="#">超链接</a></p>
+<hr>
+<p><img src="/assets/camp.png" alt=""></p>
+<hr>
+<table>
+<thead>
+<tr>
+<th style="text-align:center">表头</th>
+<th style="text-align:center">表头</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center">单元格</td>
+<td style="text-align:center">单元格</td>
+</tr>
+<tr>
+<td style="text-align:center">单元格</td>
+<td style="text-align:center">单元格</td>
+</tr>
+</tbody>
+</table>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">左对齐</th>
+<th style="text-align:right">右对齐</th>
+<th style="text-align:center">居中对齐</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">单元格</td>
+<td style="text-align:right">单元格</td>
+<td style="text-align:center">单元格</td>
+</tr>
+<tr>
+<td style="text-align:left">单元格</td>
+<td style="text-align:right">单元格</td>
+<td style="text-align:center">单元格</td>
+</tr>
+</tbody>
+</table>
 
 		</div> 
 	</body>
