--- a/pages/AllLableTest/index.html
+++ b/pages/AllLableTest/index.html
@@ -3,7 +3,7 @@
 	<head> 
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-		<link rel="stylesheet" href="/css/default.css">
+		<link rel="stylesheet" href="/manual/css/default.css">
 		<title></title> 
 	</head> 
 	<body> 
