--- a/pages/map_0/index.html
+++ b/pages/map_0/index.html
@@ -3,18 +3,104 @@
 	<head> 
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-		<link rel="stylesheet" href="/css/default.css">
+		<link rel="stylesheet" href="/manual/css/default.css">
 		<title>探险</title> 
 	</head> 
 	<body> 
 		 
 
 
-<div class="nav-bar"><a  href="/pages/AllLableTest/">AllLableTest</a><a  class="active"  href="/pages/map_0/">探险</a><div class="children"><a  href="/pages/map_event/">事件</a><a  href="/pages/map_monster/">怪物</a><a  href="/pages/map_encounter/">遭遇</a></div><a  href="/pages/battle_0/">战斗</a><div class="children"><a  href="/pages/battle_attack/">行动指令-武器</a><a  href="/pages/battle_skill/">行动指令-技能</a><a  href="/pages/battle_defence/">行动指令-防御</a><a  href="/pages/battle_escape/">行动指令-逃跑</a><a  href="/pages/battle_element/">元素反应</a><a  href="/pages/battle_buff/">增益状态</a><a  href="/pages/battle_debuff/">异常状态</a><a  href="/pages/battle_auto/">自动战斗</a></div><a  href="/pages/character_0/">队员</a><div class="children"><a  href="/pages/character_ability/">能力</a><a  href="/pages/character_grow/">队员成长</a></div><a  href="/pages/tank_0/">战车</a><div class="children"><a  href="/pages/weapon_type/">武器种类</a><a  href="/pages/weapon_performance/">武器性能</a><a  href="/pages/weapon_develop/">战车养成</a><a  href="/pages/tank_factory/">战车工厂</a></div><a  href="/pages/team_0/">队伍</a><div class="children"><a  href="/pages/team_changeUnit/">更改阵容</a><a  href="/pages/team_changeEquip/">更改装备</a><a  href="/pages/team_beauty/">战车喷涂</a></div><a  href="/pages/wanted_0/">悬赏</a><a  href="/pages/active_0/">活跃</a><a  href="/pages/dispatch_0/">派遣</a></div>
+<div class="nav-bar"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a  class="active"   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/map_event/">事件</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/map_monster/">怪物</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/map_encounter/">遭遇</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/battle_0/">战斗</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_attack/">行动指令-武器</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_skill/">行动指令-技能</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_defence/">行动指令-防御</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_escape/">行动指令-逃跑</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_element/">元素反应</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_buff/">增益状态</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_debuff/">异常状态</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_auto/">自动战斗</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/character_0/">队员</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/character_ability/">能力</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/character_grow/">队员成长</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/tank_0/">战车</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_type/">武器种类</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_performance/">武器性能</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_develop/">战车养成</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/tank_factory/">战车工厂</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/team_0/">队伍</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/team_changeEquip/">装备</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/team_beauty/">个性化</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/wanted_0/">悬赏</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/active_0/">活跃</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/dispatch_0/">派遣</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/guard_0/">保卫营地</a>
+		</div></div></div>
 
 <script>
 	/* 保持nav bar位置. */
-
 	let navbar = document.querySelector(".nav-bar");
 	let active = document.querySelector(".active");
 	let scroll = localStorage.getItem("nav-bar-scroll");
@@ -37,10 +123,42 @@
     )){
 		active.scrollIntoView();
 	}
-
 	window.addEventListener("beforeunload", () => {
 		localStorage.setItem("nav-bar-scroll", navbar.scrollTop);
 	});
+
+	/* 导航栏的折叠 */
+	var folds = document.querySelectorAll(".fold");
+	var i;
+	for (i = 0; i < folds.length; i++) {
+		var childrendiv = folds[i].parentNode.nextElementSibling
+		if(childrendiv != null){
+			childrendiv.style.display = "none";
+		}
+		if(childrendiv.compareDocumentPosition(active) == 20)
+		{
+			_click(folds[i].parentNode.firstChild)
+		}
+	}
+	function _click(target)
+	{
+		var childrendiv = target.parentNode.nextElementSibling
+		if(target.className == "fold")
+		{
+			target.className = "unfold"
+			childrendiv.style.display = "block";
+			target.parentNode.className = "foldborder"
+		}else{
+			target.className = "fold"
+			childrendiv.style.display = "none";
+			target.parentNode.className = "";
+		}
+	}
+	//选中的标题有子标题则展开
+	if(active.parentNode.nextElementSibling != null)
+	{
+		_click(active.parentNode.firstChild)
+	}
 </script> 
 		<div class="content">
 			<h1>探险</h1>
