--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
-<ul><li><a href="/pages/AllLableTest/">AllLableTest</a></li>
-<li><a href="/pages/map_0/">探险</a><ul><li><a href="/pages/map_event/">事件</a></li>
-<li><a href="/pages/map_monster/">怪物</a></li>
-<li><a href="/pages/map_encounter/">遭遇</a></li></ul></li>
-<li><a href="/pages/battle_0/">战斗</a><ul><li><a href="/pages/battle_attack/">行动指令-武器</a></li>
-<li><a href="/pages/battle_skill/">行动指令-技能</a></li>
-<li><a href="/pages/battle_defence/">行动指令-防御</a></li>
-<li><a href="/pages/battle_escape/">行动指令-逃跑</a></li>
-<li><a href="/pages/battle_element/">元素反应</a></li>
-<li><a href="/pages/battle_buff/">增益状态</a></li>
-<li><a href="/pages/battle_debuff/">异常状态</a></li>
-<li><a href="/pages/battle_auto/">自动战斗</a></li></ul></li>
-<li><a href="/pages/character_0/">队员</a><ul><li><a href="/pages/character_ability/">能力</a></li>
-<li><a href="/pages/character_grow/">队员成长</a></li></ul></li>
-<li><a href="/pages/tank_0/">战车</a><ul><li><a href="/pages/weapon_type/">武器种类</a></li>
-<li><a href="/pages/weapon_performance/">武器性能</a></li>
-<li><a href="/pages/weapon_develop/">战车养成</a></li>
-<li><a href="/pages/tank_factory/">战车工厂</a></li></ul></li>
-<li><a href="/pages/team_0/">队伍</a><ul><li><a href="/pages/team_changeUnit/">更改阵容</a></li>
-<li><a href="/pages/team_changeEquip/">更改装备</a></li>
-<li><a href="/pages/team_beauty/">战车喷涂</a></li></ul></li>
-<li><a href="/pages/wanted_0/">悬赏</a></li>
-<li><a href="/pages/active_0/">活跃</a></li>
-<li><a href="/pages/dispatch_0/">派遣</a></li></ul>
+<ul><li><a href="/AllLableTest/">AllLableTest</a></li>
+<li><a href="/manual/pages/map_0/">探险</a><ul><li><a href="/manual/pages/map_event/">事件</a></li>
+<li><a href="/manual/pages/map_monster/">怪物</a></li>
+<li><a href="/manual/pages/map_encounter/">遭遇</a></li></ul></li>
+<li><a href="/manual/pages/battle_0/">战斗</a><ul><li><a href="/manual/pages/battle_attack/">行动指令-武器</a></li>
+<li><a href="/manual/pages/battle_skill/">行动指令-技能</a></li>
+<li><a href="/manual/pages/battle_defence/">行动指令-防御</a></li>
+<li><a href="/manual/pages/battle_escape/">行动指令-逃跑</a></li>
+<li><a href="/manual/pages/battle_element/">元素反应</a></li>
+<li><a href="/manual/pages/battle_buff/">增益状态</a></li>
+<li><a href="/manual/pages/battle_debuff/">异常状态</a></li>
+<li><a href="/manual/pages/battle_auto/">自动战斗</a></li></ul></li>
+<li><a href="/manual/pages/character_0/">队员</a><ul><li><a href="/manual/pages/character_ability/">能力</a></li>
+<li><a href="/manual/pages/character_grow/">队员成长</a></li></ul></li>
+<li><a href="/manual/pages/tank_0/">战车</a><ul><li><a href="/manual/pages/weapon_type/">武器种类</a></li>
+<li><a href="/manual/pages/weapon_performance/">武器性能</a></li>
+<li><a href="/manual/pages/weapon_develop/">战车养成</a></li>
+<li><a href="/manual/pages/tank_factory/">战车工厂</a></li></ul></li>
+<li><a href="/manual/pages/team_0/">队伍</a><ul><li><a href="/manual/pages/team_changeEquip/">装备</a></li>
+<li><a href="/manual/pages/team_beauty/">个性化</a></li></ul></li>
+<li><a href="/manual/pages/wanted_0/">悬赏</a></li>
+<li><a href="/manual/pages/active_0/">活跃</a></li>
+<li><a href="/manual/pages/dispatch_0/">派遣</a></li>
+<li><a href="/manual/pages/guard_0/">保卫营地</a></li></ul>
