--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<ul><li><a href="/AllLableTest/">AllLableTest</a></li>
+<ul><li><a href="/manual/AllLableTest/">AllLableTest</a></li>
 <li><a href="/manual/pages/map_0/">探险</a><ul><li><a href="/manual/pages/map_event/">事件</a></li>
 <li><a href="/manual/pages/map_monster/">怪物</a></li>
 <li><a href="/manual/pages/map_encounter/">遭遇</a></li></ul></li>
