--- a/pages/battle_0/index.html
+++ b/pages/battle_0/index.html
@@ -162,7 +162,7 @@
 </script> 
 		<div class="content">
 			<h1>战斗</h1>
-<p><img src="/assets/battleUI.png" alt="battleUI"></p>
+<p><img src="/manual/assets/battleUI.png" alt="battleUI"></p>
 <ol>
 <li>
 <p>回合数：每回合敌我双方的单位依次行动，在限制回合内消灭全部敌人即可获胜。</p>
