--- a/pages/battle_attack/index.html
+++ b/pages/battle_attack/index.html
@@ -161,10 +161,10 @@
 	}
 </script> 
 		<div class="content">
-			<p><img src="/assets/weaponCommand.png" alt="weaponCommand"></p>
+			<p><img src="/manual/assets/weaponCommand.png" alt="weaponCommand"></p>
 <p>使用战车上装备的各式各样武器攻击敌人。</p>
 <h1>武器信息</h1>
-<p><img src="/assets/choseWeapon.png" alt="choseWeapon"></p>
+<p><img src="/manual/assets/choseWeapon.png" alt="choseWeapon"></p>
 <h3>武器范围</h3>
 <p>根据不同的武器，有单体、群体（目标及周围1单位）、全体、乱射等多种范围</p>
 <h3>弹药/冷却</h3>
