--- a/pages/battle_buff/index.html
+++ b/pages/battle_buff/index.html
@@ -171,35 +171,35 @@
 </thead>
 <tbody>
 <tr>
-<td><img src="/assets/SE_B_Attack.png" alt="SE_B_Attack"></td>
+<td><img src="/manual/assets/SE_B_Attack.png" alt="SE_B_Attack"></td>
 <td>攻击上升：按百分比提升攻击</td>
 </tr>
 <tr>
-<td><img src="/assets/SE_B_Defence.png" alt="SE_B_Defence"></td>
+<td><img src="/manual/assets/SE_B_Defence.png" alt="SE_B_Defence"></td>
 <td>防御上升：按百分比提升防御</td>
 </tr>
 <tr>
-<td><img src="/assets/SE_B_Hit.png" alt="SE_B_Hit"></td>
+<td><img src="/manual/assets/SE_B_Hit.png" alt="SE_B_Hit"></td>
 <td>命中上升：按百分比提升命中</td>
 </tr>
 <tr>
-<td><img src="/assets/SE_B_Dodge.png" alt="SE_B_Dodge"></td>
+<td><img src="/manual/assets/SE_B_Dodge.png" alt="SE_B_Dodge"></td>
 <td>闪避上升：按百分比提升闪避</td>
 </tr>
 <tr>
-<td><img src="/assets/SE_B_Heal.png" alt="SE_B_Heal"></td>
+<td><img src="/manual/assets/SE_B_Heal.png" alt="SE_B_Heal"></td>
 <td>自动修理：每回合恢复HP</td>
 </tr>
 <tr>
-<td><img src="/assets/SE_B_Defending.png" alt="SE_B_Defending"></td>
+<td><img src="/manual/assets/SE_B_Defending.png" alt="SE_B_Defending"></td>
 <td>防御中：表示正在进行防御。该状态无法驱散</td>
 </tr>
 <tr>
-<td><img src="/assets/SE_B_DebuffImmune.png" alt="SE_B_DebuffImmune"></td>
+<td><img src="/manual/assets/SE_B_DebuffImmune.png" alt="SE_B_DebuffImmune"></td>
 <td>异常免疫：免疫全部异常状态。怪物专用</td>
 </tr>
 <tr>
-<td><img src="/assets/Switch.png" alt="Switch"></td>
+<td><img src="/manual/assets/Switch.png" alt="Switch"></td>
 <td>切换状态：影响怪物的行动。怪物专用</td>
 </tr>
 </tbody>
