--- a/pages/battle_debuff/index.html
+++ b/pages/battle_debuff/index.html
@@ -162,19 +162,19 @@
 </script> 
 		<div class="content">
 			<h1>异常状态</h1>
-<p><img src="/assets/SE_D_Attack.png" alt="SE_D_Attack">攻击下降：按百分比降低攻击</p>
-<p><img src="/assets/SE_D_Defence.png" alt="SE_D_Defence">防御下降：按百分比降低防御</p>
-<p><img src="/assets/SE_D_Hit.png" alt="SE_D_Hit">命中下降：按百分比降低命中</p>
-<p><img src="/assets/SE_D_Dodge.png" alt="SE_D_Dodge">闪避下降：按百分比降低闪避</p>
-<p><img src="/assets/SE_D_Burned.png" alt="SE_D_Burned">燃烧：每回合造成伤害，攻击者的等级越高，燃烧的伤害越高</p>
-<p><img src="/assets/SE_D_Poisoned.png" alt="SE_D_Poisoned">中毒：每回合造成伤害，攻击者的感知越高，中毒的伤害越高</p>
-<p><img src="/assets/SE_D_Corroded.png" alt="SE_D_Corroded">腐蚀：每回合按百分比减少目标的HP</p>
-<p><img src="/assets/SE_D_Frozen.png" alt="SE_D_Frozen">冻结：行动速度、闪避降为0</p>
-<p><img src="/assets/SE_D_Paralysed.png" alt="SE_D_Paralysed">麻痹：行动前有30%概率跳过本回合行动</p>
-<p><img src="/assets/SE_D_Hypnotized.png" alt="SE_D_Hypnotized">睡眠：无法行动、无法迎击，受到伤害（音伤害例外）会解除</p>
-<p><img src="/assets/SE_D_Provoked.png" alt="SE_D_Provoked">挑衅：选择目标时，强制选择挑衅发起者</p>
-<p><img src="/assets/SE_D_Dizzying.png" alt="SE_D_Dizzying">眩晕：无法行动、无法迎击、无法闪避</p>
-<p><img src="/assets/SE_D_Captured.png" alt="SE_D_Captured">捕获：无法行动，并且战斗结束时，仍存活的捕获目标，将成为宠物。怪物专用。</p>
+<p><img src="/manual/assets/SE_D_Attack.png" alt="SE_D_Attack">攻击下降：按百分比降低攻击</p>
+<p><img src="/manual/assets/SE_D_Defence.png" alt="SE_D_Defence">防御下降：按百分比降低防御</p>
+<p><img src="/manual/assets/SE_D_Hit.png" alt="SE_D_Hit">命中下降：按百分比降低命中</p>
+<p><img src="/manual/assets/SE_D_Dodge.png" alt="SE_D_Dodge">闪避下降：按百分比降低闪避</p>
+<p><img src="/manual/assets/SE_D_Burned.png" alt="SE_D_Burned">燃烧：每回合造成伤害，攻击者的等级越高，燃烧的伤害越高</p>
+<p><img src="/manual/assets/SE_D_Poisoned.png" alt="SE_D_Poisoned">中毒：每回合造成伤害，攻击者的感知越高，中毒的伤害越高</p>
+<p><img src="/manual/assets/SE_D_Corroded.png" alt="SE_D_Corroded">腐蚀：每回合按百分比减少目标的HP</p>
+<p><img src="/manual/assets/SE_D_Frozen.png" alt="SE_D_Frozen">冻结：行动速度、闪避降为0</p>
+<p><img src="/manual/assets/SE_D_Paralysed.png" alt="SE_D_Paralysed">麻痹：行动前有30%概率跳过本回合行动</p>
+<p><img src="/manual/assets/SE_D_Hypnotized.png" alt="SE_D_Hypnotized">睡眠：无法行动、无法迎击，受到伤害（音伤害例外）会解除</p>
+<p><img src="/manual/assets/SE_D_Provoked.png" alt="SE_D_Provoked">挑衅：选择目标时，强制选择挑衅发起者</p>
+<p><img src="/manual/assets/SE_D_Dizzying.png" alt="SE_D_Dizzying">眩晕：无法行动、无法迎击、无法闪避</p>
+<p><img src="/manual/assets/SE_D_Captured.png" alt="SE_D_Captured">捕获：无法行动，并且战斗结束时，仍存活的捕获目标，将成为宠物。怪物专用。</p>
 
 		</div> 
 	</body>
