--- a/pages/battle_defence/index.html
+++ b/pages/battle_defence/index.html
@@ -161,7 +161,7 @@
 	}
 </script> 
 		<div class="content">
-			<p><img src="/assets/defenceCommand.png" alt="defenceCommand"></p>
+			<p><img src="/manual/assets/defenceCommand.png" alt="defenceCommand"></p>
 <p>结束本回合行动，并在下次行动前，获得3倍防御。</p>
 <p>有一些特殊效果，需要在防御时才会触发。</p>
 
