--- a/pages/battle_element/index.html
+++ b/pages/battle_element/index.html
@@ -162,21 +162,21 @@
 </script> 
 		<div class="content">
 			<h1>元素反应</h1>
-<p><img src="/assets/DamageType_Normal.png" alt="DamageType_Normal"><strong>通常</strong></p>
+<p><img src="/manual/assets/DamageType_Normal.png" alt="DamageType_Normal"><strong>通常</strong></p>
 <p>最普通的伤害类型，伤害一般较高</p>
-<p><img src="/assets/DamageType_Fire.png" alt="DamageType_Fire"><strong>火</strong></p>
+<p><img src="/manual/assets/DamageType_Fire.png" alt="DamageType_Fire"><strong>火</strong></p>
 <p>有一定概率造成燃烧</p>
 <p>攻击冻结目标时，可造成高额的破冰伤害，但会清除冻结</p>
-<p><img src="/assets/DamageType_Ice.png" alt="DamageType_Ice"><strong>冰</strong>：</p>
+<p><img src="/manual/assets/DamageType_Ice.png" alt="DamageType_Ice"><strong>冰</strong>：</p>
 <p>有一定概率造成冻结</p>
 <p>攻击麻痹目标时，可造成额外的超导伤害</p>
-<p><img src="/assets/DamageType_Elect.png" alt="DamageType_Elect"><strong>电</strong></p>
+<p><img src="/manual/assets/DamageType_Elect.png" alt="DamageType_Elect"><strong>电</strong></p>
 <p>有一定概率造成麻痹</p>
 <p>攻击睡眠目标时，可造成额外的噩梦伤害</p>
-<p><img src="/assets/DamageType_Sonic.png" alt="DamageType_Sonic"><strong>音</strong></p>
+<p><img src="/manual/assets/DamageType_Sonic.png" alt="DamageType_Sonic"><strong>音</strong></p>
 <p>有一定概率造成睡眠</p>
 <p>攻击燃烧目标时，可造成额外的扩散伤害</p>
-<p><img src="/assets/DamageType_Laser.png" alt="DamageType_Laser"><strong>光</strong></p>
+<p><img src="/manual/assets/DamageType_Laser.png" alt="DamageType_Laser"><strong>光</strong></p>
 <p>可忽略目标一定比例的防御</p>
 <p>攻击燃烧、中毒、腐蚀的目标时，可造成高额的终结伤害，但会清除这些异常状态</p>
 <p>攻击冻结、睡眠、麻痹的目标时，会将异常状态升级为眩晕</p>
