--- a/pages/battle_escape/index.html
+++ b/pages/battle_escape/index.html
@@ -161,7 +161,7 @@
 	}
 </script> 
 		<div class="content">
-			<p><img src="/assets/escapeCommand.png" alt="escapeCommand"></p>
+			<p><img src="/manual/assets/escapeCommand.png" alt="escapeCommand"></p>
 <p>尝试从战斗中撤退。逃跑成功可以避免战车损失耐久。遇到不利的战斗，就尝试逃跑指令吧！</p>
 <p>我方单位幸运越高，逃跑越容易成功。</p>
 <p>有敏捷较高的敌人时，逃跑容易失败。</p>
