--- a/pages/battle_skill/index.html
+++ b/pages/battle_skill/index.html
@@ -161,7 +161,7 @@
 	}
 </script> 
 		<div class="content">
-			<p><img src="/assets/skillCommand.png" alt="skillCommand"></p>
+			<p><img src="/manual/assets/skillCommand.png" alt="skillCommand"></p>
 <p>角色的主动技能拥有各式各样的效果，灵活运用将在战斗中无往不利。</p>
 <h1>伤害</h1>
 <p>对目标造成百分比HP的伤害。</p>
