--- a/pages/character_0/index.html
+++ b/pages/character_0/index.html
@@ -165,25 +165,25 @@
 <p>随着主人公探险的推进，会有越来越多的伙伴加入探险队。队员的能力、技能各异，能在战斗、探险两方面大显身手。</p>
 <p>队员有猎人、战士、机械师、商人4种职业，不同职业的能力成长倾向、职业技能不同。</p>
 <h1>职业</h1>
-<h2><img src="/assets/hunter.png" alt="hunter">猎人</h2>
+<h2><img src="/manual/assets/hunter.png" alt="hunter">猎人</h2>
 <ul>
 <li>拥有最高的驾驶成长，较为出色的敏捷成长，是队伍中的输出中坚。</li>
 <li>技能偏向进攻，全门开火是最强大的输出技能。</li>
 <li>擅长使用主炮，大多数猎人拥有加强主炮的技能。</li>
 </ul>
-<h2><img src="/assets/soldier.png" alt="soldier">战士</h2>
+<h2><img src="/manual/assets/soldier.png" alt="soldier">战士</h2>
 <ul>
 <li>拥有最高的体质成长，是队伍中的坚盾。</li>
 <li>技能偏向防守、团队增益，但一些足够强大的战士，可以脱离战车手撕敌人。</li>
 <li>擅长迎击武器。</li>
 </ul>
-<h2><img src="/assets/mechanic.png" alt="mechanic">机械师</h2>
+<h2><img src="/manual/assets/mechanic.png" alt="mechanic">机械师</h2>
 <ul>
 <li>拥有最高的感知成长，是队伍续航的保障。</li>
 <li>拥有各种修理技能。</li>
 <li>擅长使用副炮。</li>
 </ul>
-<h2><img src="/assets/merchant.png" alt="merchant">商人</h2>
+<h2><img src="/manual/assets/merchant.png" alt="merchant">商人</h2>
 <ul>
 <li>拥有最高的幸运成长，是可以创造奇迹的职业。</li>
 <li>技能十分全面，可以担任队伍中的任何位置。</li>
