--- a/pages/map_monster/index.html
+++ b/pages/map_monster/index.html
@@ -167,11 +167,11 @@
 <p>有一种特殊的怪物“赏金首”。赏金首隐藏在世界各地，需要在<a href="/pages/wanted_0">悬赏</a>获取情报才能遇到。赏金首比一般怪物强大，击败赏金首可以领取丰厚的报酬。</p>
 <h1>怪物种族</h1>
 <p>玩家面对的敌人是这个世界上的各种怪物，通常相同种族的怪物，有一些相似的特性。</p>
-<p><img src="/assets/Animal.png" alt="Animal">动物：通常弱冰</p>
-<p><img src="/assets/Plant.png" alt="Plant">植物：通常弱火，对麻痹有较高的抗性</p>
-<p><img src="/assets/Mechanics.png" alt="Mechanics">机械：通常弱电，对中毒有较高的抗性</p>
-<p><img src="/assets/Cyber.png" alt="Cyberl">改造：通常弱光，对睡眠有较高的抗性</p>
-<p><img src="/assets/Uma.png" alt="Uma">正体不明：通常弱音</p>
+<p><img src="/manual/assets/Animal.png" alt="Animal">动物：通常弱冰</p>
+<p><img src="/manual/assets/Plant.png" alt="Plant">植物：通常弱火，对麻痹有较高的抗性</p>
+<p><img src="/manual/assets/Mechanics.png" alt="Mechanics">机械：通常弱电，对中毒有较高的抗性</p>
+<p><img src="/manual/assets/Cyber.png" alt="Cyberl">改造：通常弱光，对睡眠有较高的抗性</p>
+<p><img src="/manual/assets/Uma.png" alt="Uma">正体不明：通常弱音</p>
 
 		</div> 
 	</body>
