--- a/pages/AllLableTest/index.html
+++ b/pages/AllLableTest/index.html
@@ -92,7 +92,7 @@
 <hr>
 <p><a href="#">超链接</a></p>
 <hr>
-<p><img src="/assets/camp.png" alt=""></p>
+<p><img src="/manual/assets/camp.png" alt=""></p>
 <hr>
 <table>
 <thead>
