--- a/pages/character_info/index.html
+++ b/pages/character_info/index.html
@@ -1,3 +1,3 @@
 <h1>Test</h1>
 <h2>test test test</h2>
-<p><img src="/assets/big_3.png" alt=""></p>
+<p><img src="/manual/assets/big_3.png" alt=""></p>
