--- a/pages/tank_slot/index.html
+++ b/pages/tank_slot/index.html
@@ -1,3 +1,3 @@
 <h1>武器槽</h1>
 <h2>test test test</h2>
-<p><img src="/assets/big_3.png" alt=""></p>
+<p><img src="/manual/assets/big_3.png" alt=""></p>
