--- a/pages/team_beauty/index.html
+++ b/pages/team_beauty/index.html
@@ -3,18 +3,104 @@
 	<head> 
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-		<link rel="stylesheet" href="/css/default.css">
-		<title>战车喷涂</title> 
+		<link rel="stylesheet" href="/manual/css/default.css">
+		<title>个性化</title> 
 	</head> 
 	<body> 
 		 
 
 
-<div class="nav-bar"><a  href="/pages/AllLableTest/">AllLableTest</a><a  href="/pages/map_0/">探险</a><div class="children"><a  href="/pages/map_event/">事件</a><a  href="/pages/map_monster/">怪物</a><a  href="/pages/map_encounter/">遭遇</a></div><a  href="/pages/battle_0/">战斗</a><div class="children"><a  href="/pages/battle_attack/">行动指令-武器</a><a  href="/pages/battle_skill/">行动指令-技能</a><a  href="/pages/battle_defence/">行动指令-防御</a><a  href="/pages/battle_escape/">行动指令-逃跑</a><a  href="/pages/battle_element/">元素反应</a><a  href="/pages/battle_buff/">增益状态</a><a  href="/pages/battle_debuff/">异常状态</a><a  href="/pages/battle_auto/">自动战斗</a></div><a  href="/pages/character_0/">队员</a><div class="children"><a  href="/pages/character_ability/">能力</a><a  href="/pages/character_grow/">队员成长</a></div><a  href="/pages/tank_0/">战车</a><div class="children"><a  href="/pages/weapon_type/">武器种类</a><a  href="/pages/weapon_performance/">武器性能</a><a  href="/pages/weapon_develop/">战车养成</a><a  href="/pages/tank_factory/">战车工厂</a></div><a  href="/pages/team_0/">队伍</a><div class="children"><a  href="/pages/team_changeUnit/">更改阵容</a><a  href="/pages/team_changeEquip/">更改装备</a><a  class="active"  href="/pages/team_beauty/">战车喷涂</a></div><a  href="/pages/wanted_0/">悬赏</a><a  href="/pages/active_0/">活跃</a><a  href="/pages/dispatch_0/">派遣</a></div>
+<div class="nav-bar"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/map_event/">事件</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/map_monster/">怪物</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/map_encounter/">遭遇</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/battle_0/">战斗</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_attack/">行动指令-武器</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_skill/">行动指令-技能</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_defence/">行动指令-防御</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_escape/">行动指令-逃跑</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_element/">元素反应</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_buff/">增益状态</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_debuff/">异常状态</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_auto/">自动战斗</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/character_0/">队员</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/character_ability/">能力</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/character_grow/">队员成长</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/tank_0/">战车</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_type/">武器种类</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_performance/">武器性能</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_develop/">战车养成</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/tank_factory/">战车工厂</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/team_0/">队伍</a>
+		</div><div class="children"><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a   href="/manual/pages/team_changeEquip/">装备</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point" ></div><a  class="active"   href="/manual/pages/team_beauty/">个性化</a>
+		</div></div></div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/wanted_0/">悬赏</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/active_0/">活跃</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/dispatch_0/">派遣</a>
+		</div></div><div>
+		<!-- 展开选项的底边 -->
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/guard_0/">保卫营地</a>
+		</div></div></div>
 
 <script>
 	/* 保持nav bar位置. */
-
 	let navbar = document.querySelector(".nav-bar");
 	let active = document.querySelector(".active");
 	let scroll = localStorage.getItem("nav-bar-scroll");
@@ -37,15 +123,59 @@
     )){
 		active.scrollIntoView();
 	}
-
 	window.addEventListener("beforeunload", () => {
 		localStorage.setItem("nav-bar-scroll", navbar.scrollTop);
 	});
+
+	/* 导航栏的折叠 */
+	var folds = document.querySelectorAll(".fold");
+	var i;
+	for (i = 0; i < folds.length; i++) {
+		var childrendiv = folds[i].parentNode.nextElementSibling
+		if(childrendiv != null){
+			childrendiv.style.display = "none";
+		}
+		if(childrendiv.compareDocumentPosition(active) == 20)
+		{
+			_click(folds[i].parentNode.firstChild)
+		}
+	}
+	function _click(target)
+	{
+		var childrendiv = target.parentNode.nextElementSibling
+		if(target.className == "fold")
+		{
+			target.className = "unfold"
+			childrendiv.style.display = "block";
+			target.parentNode.className = "foldborder"
+		}else{
+			target.className = "fold"
+			childrendiv.style.display = "none";
+			target.parentNode.className = "";
+		}
+	}
+	//选中的标题有子标题则展开
+	if(active.parentNode.nextElementSibling != null)
+	{
+		_click(active.parentNode.firstChild)
+	}
 </script> 
 		<div class="content">
-			<h1>战车喷涂</h1>
-<h2>test test test</h2>
-<p><img src="/assets/big_3.png" alt=""></p>
+			<h1>个性化</h1>
+<p>在这里可以打造外观独一无二的战车！</p>
+<h2>喷漆</h2>
+<p>改变车体的颜色或动态效果。</p>
+<h2>贴花</h2>
+<p>需要用装饰币购买贴花。</p>
+<p>贴花可以编辑：</p>
+<ul>
+<li>移动：拖动操作柄或调整摄像机都可以改变贴花在战车的位置，所见即所得。</li>
+<li>缩放：按住<img src="/manual/assets/beauty_rotate.png" alt="Button_Mirror">向右放大，向左缩小。</li>
+<li>旋转：按住<img src="/manual/assets/beauty_rotate.png" alt="Button_Mirror">向上逆时针旋转，向下顺时针旋转。</li>
+<li>镜像：点击<img src="/manual/assets/beauty_mirror.png" alt="Button_Mirror">会生成一个镜像的贴花，在进行移动、缩放、旋转操作时，镜像也会做出相应的变化。镜像没有额外花费。</li>
+</ul>
+<p>贴花在应用后，仍然可以修改，但不能在其他战车上使用，并且一旦从战车上移除，将不会保留。</p>
+<p>每辆战车最多可以使用20个贴花，最多可以保存3个贴花方案。</p>
 
 		</div> 
 	</body>
