--- a/pages/team_changeUnit/index.html
+++ b/pages/team_changeUnit/index.html
@@ -3,7 +3,7 @@
 	<head> 
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-		<link rel="stylesheet" href="/css/default.css">
+		<link rel="stylesheet" href="/manual/css/default.css">
 		<title>更改阵容</title> 
 	</head> 
 	<body> 
@@ -45,7 +45,7 @@
 		<div class="content">
 			<h1>更改阵容</h1>
 <h2>test test test</h2>
-<p><img src="/assets/big_3.png" alt=""></p>
+<p><img src="/manual/assets/big_3.png" alt=""></p>
 
 		</div> 
 	</body>
