--- a/pages/battle_0/index.html
+++ b/pages/battle_0/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -168,13 +168,13 @@
 <p>回合数：每回合敌我双方的单位依次行动，在限制回合内消灭全部敌人即可获胜。</p>
 </li>
 <li>
-<p>行动指令：轮到单位行动时，可以选择<a href="/pages/battle_attack">武器</a>、<a href="/pages/battle_skill">技能</a>、<a href="/pages/battle_defence">防御</a>、<a href="/pages/battle_escape">逃跑</a>。</p>
+<p>行动指令：轮到单位行动时，可以选择<a href="/manual/pages/battle_attack">武器</a>、<a href="/manual/pages/battle_skill">技能</a>、<a href="/manual/pages/battle_defence">防御</a>、<a href="/manual/pages/battle_escape">逃跑</a>。</p>
 </li>
 <li>
 <p>行动队列：依据单位的行动速度排序，一些行动可以影响行动速度，从而改变行动队列。</p>
 </li>
 <li>
-<p>状态效果：分为<a href="/pages/battle_buff">增益状态</a>、<a href="/pages/battle_debuff">异常状态</a></p>
+<p>状态效果：分为<a href="/manual/pages/battle_buff">增益状态</a>、<a href="/manual/pages/battle_debuff">异常状态</a></p>
 </li>
 </ol>
 
