--- a/pages/character_grow/index.html
+++ b/pages/character_grow/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -166,7 +166,7 @@
 <h2>升级</h2>
 <h3>等级影响</h3>
 <ul>
-<li><a href="/pages/character_ability">能力</a>随等级提升</li>
+<li><a href="/manual/pages/character_ability">能力</a>随等级提升</li>
 <li>在某些等级，队员可以获得新的技能</li>
 </ul>
 <h3>如何升级？</h3>
@@ -178,7 +178,7 @@
 <h2>升星</h2>
 <h3>星级影响</h3>
 <ul>
-<li><a href="/pages/character_ability">能力</a>按百分比提升</li>
+<li><a href="/manual/pages/character_ability">能力</a>按百分比提升</li>
 <li>提升队员等级上限</li>
 </ul>
 <h3><strong>如何升星</strong></h3>
