--- a/pages/map_monster/index.html
+++ b/pages/map_monster/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -164,7 +164,7 @@
 			<h1>怪物</h1>
 <p>遇到地图上的怪物会发生战斗，被击败的怪物将从地图上移除。</p>
 <p>每天5点，地图上的怪物会在随机的位置刷新。</p>
-<p>有一种特殊的怪物“赏金首”。赏金首隐藏在世界各地，需要在<a href="/pages/wanted_0">悬赏</a>获取情报才能遇到。赏金首比一般怪物强大，击败赏金首可以领取丰厚的报酬。</p>
+<p>有一种特殊的怪物“赏金首”。赏金首隐藏在世界各地，需要在<a href="/manual/pages/wanted_0">悬赏</a>获取情报才能遇到。赏金首比一般怪物强大，击败赏金首可以领取丰厚的报酬。</p>
 <h1>怪物种族</h1>
 <p>玩家面对的敌人是这个世界上的各种怪物，通常相同种族的怪物，有一些相似的特性。</p>
 <p><img src="/manual/assets/Animal.png" alt="Animal">动物：通常弱冰</p>
