--- a/pages/battle_skill/index.html
+++ b/pages/battle_skill/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -172,7 +172,7 @@
 <h1>驯服</h1>
 <p>尝试捕获怪物，战斗结束时，可驯服所有仍然存活的被捕获怪物。</p>
 <h1>赋予状态</h1>
-<p>赋予目标各种<a href="/pages/battle_buff">增益状态</a>、<a href="/pages/battle_debuff">异常状态</a>。</p>
+<p>赋予目标各种<a href="/manual/pages/battle_buff">增益状态</a>、<a href="/manual/pages/battle_debuff">异常状态</a>。</p>
 
 		</div> 
 	</body>
