--- a/pages/tank_0/index.html
+++ b/pages/tank_0/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -166,11 +166,11 @@
 <p>战车由车体、武器、引擎、C单元组成。</p>
 <h2>车体</h2>
 <p>车体决定了HP，并提供防御属性。</p>
-<p>每个车体对不同<a href="/pages/battle_element">元素</a>的伤害，有不同的防御性能。</p>
-<p>每个车体有最多5个武器槽，可装备的<a href="/pages/weapon_type">武器种类</a>不同。</p>
+<p>每个车体对不同<a href="/manual/pages/battle_element">元素</a>的伤害，有不同的防御性能。</p>
+<p>每个车体有最多5个武器槽，可装备的<a href="/manual/pages/weapon_type">武器种类</a>不同。</p>
 <h2>武器</h2>
 <p>武器提供攻击、命中属性。</p>
-<p>每种武器有不同的<a href="/pages/weapon_performance">攻击性能</a>。</p>
+<p>每种武器有不同的<a href="/manual/pages/weapon_performance">攻击性能</a>。</p>
 <h2>C单元</h2>
 <p>C单元提供闪避、行动速度。</p>
 <p>部分C单元带有1个特殊效果。</p>
