--- a/pages/tank_factory/index.html
+++ b/pages/tank_factory/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -166,7 +166,7 @@
 <p>工厂起初有两条生产线，每条生产线同时可以制造一辆战车。</p>
 <p>生产前，需要向工厂一次性提供废料、钢、电子元件、巴特工具箱4种材料，之后工厂开始自动制造，不同战车花费的时间也不同，越厉害的战车花费的时间越多。</p>
 <p>根据材料的数量和配比，可能会造出不同的战车，甚至可以造出从没见过的稀有战车。</p>
-<p>废料、钢、电子元件主要在营地生产，另外击败地图上的<a href="/pages/map_monster">怪物</a>也有一定概率获得。而巴特工具箱只能通过<a href="/pages/active_0">活跃</a>奖励获得。</p>
+<p>废料、钢、电子元件主要在营地生产，另外击败地图上的<a href="/manual/pages/map_monster">怪物</a>也有一定概率获得。而巴特工具箱只能通过<a href="/manual/pages/active_0">活跃</a>奖励获得。</p>
 
 		</div> 
 	</body>
