--- a/pages/team_changeEquip/index.html
+++ b/pages/team_changeEquip/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -163,7 +163,7 @@
 		<div class="content">
 			<h1>装备</h1>
 <p>战车的车体、武器都有相应的重量，引擎提供负重。当战车总总量超过引擎的负重时<img src="/manual/assets/weight.png" alt="weight">，战车将无法进入战斗。</p>
-<p>每辆战车的武器槽只能装备指定的武器，例如<img src="/manual/assets/slot.png" alt="slot">只能装备<a href="/pages/weapon_type">副炮</a>。</p>
+<p>每辆战车的武器槽只能装备指定的武器，例如<img src="/manual/assets/slot.png" alt="slot">只能装备<a href="/manual/pages/weapon_type">副炮</a>。</p>
 
 		</div> 
 	</body>
