--- a/pages/weapon_develop/index.html
+++ b/pages/weapon_develop/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -175,8 +175,8 @@
 <h3>如何强化？</h3>
 <ul>
 <li>不同稀有度的装备需要不同的强化材料，稀有度越高，需要的材料越多。</li>
-<li>可以在地图中的<a href="/pages/map_event">资源</a>找到强化需要的铁矿和稀有矿石。</li>
-<li>部分<a href="/pages/dispatch_0">派遣任务</a>可以获得矿石奖励。</li>
+<li>可以在地图中的<a href="/manual/pages/map_event">资源</a>找到强化需要的铁矿和稀有矿石。</li>
+<li>部分<a href="/manual/pages/dispatch_0">派遣任务</a>可以获得矿石奖励。</li>
 <li>强化并不是百分百成功，失败时有一定概率掉级。</li>
 </ul>
 <h2>研发</h2>
