--- a/pages/weapon_performance/index.html
+++ b/pages/weapon_performance/index.html
@@ -12,7 +12,7 @@
 
 <div class="nav-bar"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/AllLableTest/">AllLableTest</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
 		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
@@ -171,7 +171,7 @@
 <p>弹药：每次攻击会消耗1弹药（不论攻击次数），没有弹药的武器在本场战斗中无法继续使用。</p>
 <p>冷却：部分武器在使用后需要一定回合冷却，冷却后才能继续使用。</p>
 <p>充能：部分武器需要充能才能造成伤害，充能需要花费1回合。</p>
-<p>异常状态：部分武器可以造成<a href="/pages/battle_debuff">异常状态</a></p>
+<p>异常状态：部分武器可以造成<a href="/manual/pages/battle_debuff">异常状态</a></p>
 <p>特殊效果：获得武器时，有可能获得最多5个特殊效果。包括即死、连击、不屈、不消耗弹药、再行动……多种多样的效果，通过组合搭配可以让战斗更加有利。</p>
 
 		</div> 
