--- a/pages/test2/index.html
+++ b/pages/test2/index.html
@@ -3,7 +3,7 @@
 	<head> 
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-		<link rel="stylesheet" href="/css/default.css">
+		<link rel="stylesheet" href="/manual/css/default.css">
 		<title>Test2</title> 
 	</head> 
 	<body> 
@@ -11,71 +11,71 @@
 
 
 <div class="sidebar">
-		<a class="nav-item" href="/pages/team_changeUnit/">更改阵容</a> 
+		<a class="nav-item" href="/manual/pages/team_changeUnit/">更改阵容</a> 
 	
-		<a class="nav-item" href="/pages/active_0/">活跃任务</a> 
+		<a class="nav-item" href="/manual/pages/active_0/">活跃任务</a> 
 	
-		<a class="nav-item" href="/pages/battle_0/">战斗基础</a> 
+		<a class="nav-item" href="/manual/pages/battle_0/">战斗基础</a> 
 	
-		<a class="nav-item" href="/pages/battle_attack/">行动指令-武器</a> 
+		<a class="nav-item" href="/manual/pages/battle_attack/">行动指令-武器</a> 
 	
-		<a class="nav-item" href="/pages/battle_auto/">自动战斗</a> 
+		<a class="nav-item" href="/manual/pages/battle_auto/">自动战斗</a> 
 	
-		<a class="nav-item" href="/pages/battle_buff/">增益状态</a> 
+		<a class="nav-item" href="/manual/pages/battle_buff/">增益状态</a> 
 	
-		<a class="nav-item" href="/pages/battle_debuff/">异常状态</a> 
+		<a class="nav-item" href="/manual/pages/battle_debuff/">异常状态</a> 
 	
-		<a class="nav-item" href="/pages/battle_defence/">行动指令-防御</a> 
+		<a class="nav-item" href="/manual/pages/battle_defence/">行动指令-防御</a> 
 	
-		<a class="nav-item" href="/pages/battle_element/">元素反应</a> 
+		<a class="nav-item" href="/manual/pages/battle_element/">元素反应</a> 
 	
-		<a class="nav-item" href="/pages/battle_escape/">行动指令-逃跑</a> 
+		<a class="nav-item" href="/manual/pages/battle_escape/">行动指令-逃跑</a> 
 	
-		<a class="nav-item" href="/pages/battle_skill/">行动指令-技能</a> 
+		<a class="nav-item" href="/manual/pages/battle_skill/">行动指令-技能</a> 
 	
-		<a class="nav-item" href="/pages/character_ability/">角色能力</a> 
+		<a class="nav-item" href="/manual/pages/character_ability/">角色能力</a> 
 	
-		<a class="nav-item" href="/pages/character_grow/">角色成长</a> 
+		<a class="nav-item" href="/manual/pages/character_grow/">角色成长</a> 
 	
-		<a class="nav-item" href="/pages/character_info/">角色信息</a> 
+		<a class="nav-item" href="/manual/pages/character_info/">角色信息</a> 
 	
-		<a class="nav-item" href="/pages/character_job/">职业</a> 
+		<a class="nav-item" href="/manual/pages/character_job/">职业</a> 
 	
-		<a class="nav-item" href="/pages/character_race/">种族</a> 
+		<a class="nav-item" href="/manual/pages/character_race/">种族</a> 
 	
-		<a class="nav-item" href="/pages/dispatch_0/">派遣</a> 
+		<a class="nav-item" href="/manual/pages/dispatch_0/">派遣</a> 
 	
-		<a class="nav-item" href="/pages/map_0/">探险地图</a> 
+		<a class="nav-item" href="/manual/pages/map_0/">探险地图</a> 
 	
-		<a class="nav-item" href="/pages/map_camp/">营地</a> 
+		<a class="nav-item" href="/manual/pages/map_camp/">营地</a> 
 	
-		<a class="nav-item" href="/pages/map_event/">地图事件</a> 
+		<a class="nav-item" href="/manual/pages/map_event/">地图事件</a> 
 	
-		<a class="nav-item" href="/pages/map_monster/">怪物</a> 
+		<a class="nav-item" href="/manual/pages/map_monster/">怪物</a> 
 	
-		<a class="nav-item" href="/pages/tank_element/">元素防御</a> 
+		<a class="nav-item" href="/manual/pages/tank_element/">元素防御</a> 
 	
-		<a class="nav-item" href="/pages/tank_factory/">战车工厂</a> 
+		<a class="nav-item" href="/manual/pages/tank_factory/">战车工厂</a> 
 	
-		<a class="nav-item" href="/pages/tank_slot/">武器槽</a> 
+		<a class="nav-item" href="/manual/pages/tank_slot/">武器槽</a> 
 	
-		<a class="nav-item" href="/pages/team_beauty/">个性化</a> 
+		<a class="nav-item" href="/manual/pages/team_beauty/">个性化</a> 
 	
-		<a class="nav-item" href="/pages/team_changeEquip/">更改装备</a> 
+		<a class="nav-item" href="/manual/pages/team_changeEquip/">更改装备</a> 
 	
-		<a class="nav-item" href="/pages/wanted_0/">悬赏</a> 
+		<a class="nav-item" href="/manual/pages/wanted_0/">悬赏</a> 
 	
-		<a class="nav-item" href="/pages/weapon_develop/">武器养成</a> 
+		<a class="nav-item" href="/manual/pages/weapon_develop/">武器养成</a> 
 	
-		<a class="nav-item" href="/pages/weapon_performance/">武器性能</a> 
+		<a class="nav-item" href="/manual/pages/weapon_performance/">武器性能</a> 
 	
-		<a class="nav-item" href="/pages/weapon_type/">武器种类</a> 
+		<a class="nav-item" href="/manual/pages/weapon_type/">武器种类</a> 
 	
-		<a class="nav-item-active" href="/pages/test2/">Test2</a> 
+		<a class="nav-item-active" href="/manual/pages/test2/">Test2</a> 
 	
-		<a class="nav-item" href="/pages/test3/">Test3</a> 
+		<a class="nav-item" href="/manual/pages/test3/">Test3</a> 
 	
-		<a class="nav-item" href="/pages/test4/">Test4</a> 
+		<a class="nav-item" href="/manual/pages/test4/">Test4</a> 
 	</div> 
 		<div class="content">
 			<h1>Test</h1>
