--- a/pages/map_event/index.html
+++ b/pages/map_event/index.html
@@ -3,7 +3,7 @@
 	<head> 
 		<meta charset="utf-8" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-		<link rel="stylesheet" href="/css/default.css">
+		<link rel="stylesheet" href="/manual/css/default.css">
 		<title>事件</title> 
 	</head> 
 	<body> 
@@ -15,88 +15,88 @@
 		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/AllLableTest/">AllLableTest</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/map_0/">探险</a>
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/map_0/">探险</a>
 		</div><div class="children"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a  class="active"   href="/pages/map_event/">事件</a>
+		<div><div class = "point" ></div><a  class="active"   href="/manual/pages/map_event/">事件</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/map_monster/">怪物</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/map_monster/">怪物</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/map_encounter/">遭遇</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/map_encounter/">遭遇</a>
 		</div></div></div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/battle_0/">战斗</a>
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/battle_0/">战斗</a>
 		</div><div class="children"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/battle_attack/">行动指令-武器</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_attack/">行动指令-武器</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/battle_skill/">行动指令-技能</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_skill/">行动指令-技能</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/battle_defence/">行动指令-防御</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_defence/">行动指令-防御</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/battle_escape/">行动指令-逃跑</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_escape/">行动指令-逃跑</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/battle_element/">元素反应</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_element/">元素反应</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/battle_buff/">增益状态</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_buff/">增益状态</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/battle_debuff/">异常状态</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_debuff/">异常状态</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/battle_auto/">自动战斗</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/battle_auto/">自动战斗</a>
 		</div></div></div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/character_0/">队员</a>
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/character_0/">队员</a>
 		</div><div class="children"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/character_ability/">能力</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/character_ability/">能力</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/character_grow/">队员成长</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/character_grow/">队员成长</a>
 		</div></div></div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/tank_0/">战车</a>
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/tank_0/">战车</a>
 		</div><div class="children"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/weapon_type/">武器种类</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_type/">武器种类</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/weapon_performance/">武器性能</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_performance/">武器性能</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/weapon_develop/">战车养成</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/weapon_develop/">战车养成</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/tank_factory/">战车工厂</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/tank_factory/">战车工厂</a>
 		</div></div></div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/team_0/">队伍</a>
+		<div><div class = "fold" onclick = "_click(this)"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/team_0/">队伍</a>
 		</div><div class="children"><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/team_changeEquip/">装备</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/team_changeEquip/">装备</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point" ></div><a   href="/pages/team_beauty/">个性化</a>
+		<div><div class = "point" ></div><a   href="/manual/pages/team_beauty/">个性化</a>
 		</div></div></div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/wanted_0/">悬赏</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/wanted_0/">悬赏</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/active_0/">活跃</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/active_0/">活跃</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/dispatch_0/">派遣</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/dispatch_0/">派遣</a>
 		</div></div><div>
 		<!-- 展开选项的底边 -->
-		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/pages/guard_0/">保卫营地</a>
+		<div><div class = "point"  oneLevelLabel_icon = "true" ></div><a   onelevellabel_a = "true"  href="/manual/pages/guard_0/">保卫营地</a>
 		</div></div></div>
 
 <script>
@@ -162,12 +162,12 @@
 </script> 
 		<div class="content">
 			<h1>地图事件</h1>
-<p><img src="/assets/map_delivery.png" alt="delivery">传送：前往其他地图</p>
-<p><img src="/assets/map_monster.png" alt="monster">怪物：发生战斗</p>
-<p><img src="/assets/map_npc.png" alt="npc">NPC：和NPC交谈或进行其他互动</p>
-<p><img src="/assets/map_resources.png" alt="resources">资源：矿、采集点等，可以找到养成资源</p>
-<p><img src="/assets/map_block.png" alt="block">路障：无法通行。通常在达成一些条件后，可以清除路障</p>
-<p><img src="/assets/map_box.png" alt="box">宝箱：随机获得1件装备</p>
+<p><img src="/manual/assets/map_delivery.png" alt="delivery">传送：前往其他地图</p>
+<p><img src="/manual/assets/map_monster.png" alt="monster">怪物：发生战斗</p>
+<p><img src="/manual/assets/map_npc.png" alt="npc">NPC：和NPC交谈或进行其他互动</p>
+<p><img src="/manual/assets/map_resources.png" alt="resources">资源：矿、采集点等，可以找到养成资源</p>
+<p><img src="/manual/assets/map_block.png" alt="block">路障：无法通行。通常在达成一些条件后，可以清除路障</p>
+<p><img src="/manual/assets/map_box.png" alt="box">宝箱：随机获得1件装备</p>
 
 		</div> 
 	</body>
